// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeleteButton > renders correctly when isMobile is false 1`] = `
<evocon-v-button-stub
  color="error"
  icon=""
  iconcolor=""
  text="Delete"
  textclass=""
  type="secondary"
/>
`;

exports[`DeleteButton > renders correctly when isMobile is true 1`] = `
<evocon-v-button-stub
  color=""
  icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
  iconcolor=""
  text=""
  textclass=""
  type="secondary"
/>
`;
